# telegram-doc-automation-bot

./: .env.example  .gitignore  README.md  completion_certificate_template_en.docx  contract_template_en.docx  pyproject.toml
app/: __init__.py  bot.py  config.py  states.py
app/data/: work_items.example.json
app/handlers/: __init__.py  callbacks.py  messages.py  navigation.py  prompts.py  start.py
app/keyboards/: __init__.py  main_menu.py  workflow.py
app/services/: __init__.py  access_control.py  archive_service.py  date_utils.py  document_generator.py  export_service.py  file_service.py  payloads.py  pdf_converter.py  template_mapping.py  text_utils.py  validation.py  work_items.py
app/templates/: README.md  completion_certificate_template.docx  contract_template.docx
docs/: architecture.md
docs/templates/: completion_certificate_template.md  contract_template.md
tests/: test_archive_service.py  test_date_utils.py  test_document_generator.py  test_file_service.py  test_pdf_converter.py  test_template_mapping.py  test_text_utils.py  test_validation.py  test_work_items.py
